// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shinkansen-cogs/components/input <CheckInput /> With additional props renders 1`] = `
<input
  className="input"
  disabled={true}
  id="MOCK ID"
  placeholder="MOCK PLACEHOLDER"
  readOnly={true}
  required={true}
/>
`;

exports[`shinkansen-cogs/components/input <CheckInput /> With required props renders 1`] = `
<input
  className="input"
  disabled={false}
  readOnly={false}
  required={false}
/>
`;

exports[`shinkansen-cogs/components/input <Input /> With additional props renders 1`] = `
<input
  accessKey="MOCK ACCESS KEY"
  className="input"
  disabled={true}
  id="MOCK ID"
  placeholder="MOCK PLACEHOLDER"
  readOnly={true}
  required={true}
  tabIndex={1}
/>
`;

exports[`shinkansen-cogs/components/input <Input /> With required props renders 1`] = `
<input
  className="input"
  disabled={false}
  readOnly={false}
  required={false}
/>
`;

exports[`shinkansen-cogs/components/input <ValueInput /> With additional props renders 1`] = `
<input
  accessKey="MOCK ACCESS KEY"
  className="input"
  disabled={true}
  id="MOCK ID"
  placeholder="MOCK PLACEHOLDER"
  readOnly={true}
  required={true}
  tabIndex={1}
/>
`;

exports[`shinkansen-cogs/components/input <ValueInput /> With required props renders 1`] = `
<input
  className="input"
  disabled={false}
  readOnly={false}
  required={false}
/>
`;
